--- a/frontend/src/Navbar/navbar.css
+++ b/frontend/src/Navbar/navbar.css
@@ -1,6 +1,230 @@
-.Navbar{
-    max-width:100%;
-    height: 50px;
-    border:1px solid black;
-    background-color: black;
+*{
+
+      font-family: "Roboto Mono", monospace;
+      text-decoration: none;
 }
+.navbar{
+    max-width:100%;
+    height: 130px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.navbar .nav-top{
+    width:100%;
+    height:20px;
+    background-color: brown;
+    color:white;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    font-size:13px;
+}
+
+.navbar .nav-menu{
+    width:100%;
+    height:100%;
+    background-color: rgb(0, 0, 0);
+    color:rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}
+.nav-menu .nav{
+    width:100%;
+    height:60px;
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.nav .logo_icon{
+    max-width: 100%;
+    height: 60px;
+    margin-left:120px;
+}
+.nav .logo_icon img{
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+}
+.nav .search_bar{
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search_bar .search-input{
+    width:500px;
+    height:35px;
+    border:2px solid black;
+    border-radius:3px;
+}
+.nav .login_cart_buttons{
+    width:auto;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    margin-right:150px;
+}
+.login_cart_buttons img{
+    width:28px;
+    height:28px;
+}
+.login_cart_buttons .login_button{
+    width:90px;
+    height:35px;
+    background-color: transparent;
+    border:2px solid #F2A727;
+    border-radius:3px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.nav-menu .menu{
+    width:100%;
+    height:100%;
+    background-color: #F2A727;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style:none;
+}
+.menu .menulink{
+    width:auto;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 500;
+    margin-left:0px;
+    cursor: pointer;
+}
+.menulink .hamburger{
+    width:28px;
+    height:28px;
+}
+.menu .navlinks{
+    width:auto;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navlinks .links{
+    list-style: none;
+    height:100%;
+    align-items: center;
+    display:flex;
+    justify-content: center;
+    margin-left:20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.links:hover{
+    background-color: black;
+    color:white;
+}
+.menu .jncomnty{
+    width:200px;
+    border:1px solid black;
+    border-radius:3px;
+    padding:7px;
+    letter-spacing: 3px;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: rgb(255, 255, 255);
+    color:#000000;
+    cursor: pointer;
+}
+.jncomnty:hover{
+    background-color: black;
+    color:white;
+    border:none;
+}
+
+/*
+.navbar .topnavbar{
+    width:100%;
+    height:25px;
+    background-color: brown;
+    color:white;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+}
+.mainnav{
+    width:100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+ .navbar .comlogo .company-logo{
+    width:90px;
+    height: 90px;
+    object-fit: contain;
+    border-radius: 15px;
+    margin-left:15px;
+}
+.Nav_menu{
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid white;
+    margin-left:50px;
+}
+.Nav_menu li{
+    color:rgb(0, 0, 0);
+    margin-left:50px;
+    list-style:none;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.Nav_menu .navliks hr{
+    border:none;
+    height:3px;
+    width:80%;
+    border-radius:10px;
+    background-color: rgb(117, 92, 10);
+    transform: 0.3s ease-in-out;
+}
+.nav-login-cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+
+}
+.nav-login-cart .login_button{
+    width:100px;
+    height: 30px;
+    border:1px solid black;
+    border-radius: 50px;
+    background-color: transparent;
+    font-size:16px;
+}
+.nav-login-cart .cart_icon{
+    width:30px;
+    height:30px;
+    margin-left:25px;
+}
+.nav-login-cart .cart-count{
+    width:20px;
+    height:20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:-25px;
+    border-radius:100px;
+    background-color: red;
+    color: white;
+}
+*/
