--- a/frontend/src/Navbar/navbar.css
+++ b/frontend/src/Navbar/navbar.css
@@ -105,6 +105,11 @@
     font-size: 16px;
     font-weight: 500;
 }
+.login_button:hover{
+    background-color: black;
+    color:white;
+    border:none;
+}
 .nav-menu .menu{
     width:100%;
     height:100%;
