--- a/frontend/src/components/item/item.css
+++ b/frontend/src/components/item/item.css
@@ -1,21 +1,45 @@
 .item{
-    width:350px;
+    width:280px;
+    height:350px;
+    border:1px solid black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-.item p{
-    margin: 6px 0px;
+.item .prod_name{
+    margin: 5px 5px;
 }
 .item-prices{
     display:flex;
     gap: 20px;
 }
+.item .prod_image{
+    width:150px;
+    height:150px;
+    object-fit: contain;
+    border:1px solid black;
+}
 .item-price-new{
     color: black;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 900;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid black;
+    padding: 10px;
 }
 .item-price-old{
     color:red;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 18px;
+    font-weight: 600;
     text-decoration: line-through;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid black;
+    padding: 10px;
 }
