--- a/frontend/src/components/bestsellers/bestsellers.css
+++ b/frontend/src/components/bestsellers/bestsellers.css
@@ -1,11 +1,16 @@
 .bestsellers_section{
     width: 100%;
-    height: 400px;
+    height: 500px;
     border:1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: black;
+}
+.bestsellers_section h1{
+    font-size: 40px;
+    color:white;
 }
 .bestseller_prod{
     width:100%;
