--- a/frontend/src/components/item/item.css
+++ b/frontend/src/components/item/item.css
@@ -1,11 +1,13 @@
 .item{
-    width:280px;
-    height:350px;
+    width:300px;
+    height:400px;
     border:1px solid black;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    border-radius:10px;
 }
 .item .prod_name{
     margin: 5px 5px;
@@ -42,4 +44,34 @@
     align-items: center;
     border:1px solid black;
     padding: 10px;
+}
+.item .buy_cart{
+    width: 90%;
+    height:50px;
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    border:1px solid black;
+    margin-top:5px; 
+}
+.buy_cart .buy_now button{
+    width: 90px;
+    background-color: #F2A727;
+    color:black;
+    border-radius:100px;
+    padding: 5px;
+    font-weight: 900;
+    font-size: 16px;
+    border:none;
+
+}
+.buy_cart .add_to_cart button{
+    width: 150px;
+    background-color: #F2A727;
+    color:black;
+    border-radius:100px;
+    padding: 5px;
+    font-weight: 900;
+    font-size: 16px;
+    border:none;
 }
