--- a/frontend/src/components/item/item.css
+++ b/frontend/src/components/item/item.css
@@ -1,5 +1,5 @@
 .item{
-    width:300px;
+    width:auto;
     height:400px;
     border:1px solid black;
     display: flex;
@@ -8,6 +8,21 @@
     align-items: center;
     background-color: white;
     border-radius:10px;
+}
+.item .discount{
+    width:35px;
+    height:35px;
+    border-radius:5px;
+    margin-left: -200px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:5px;
+}
+.discount p{
+    font-weight: bold;
+    color:white;
 }
 .item .prod_name{
     margin: 5px 5px;
@@ -21,7 +36,6 @@
     width:150px;
     height:150px;
     object-fit: contain;
-    border:1px solid black;
 }
 .item-price-new{
     color: black;
@@ -31,7 +45,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border:1px solid black;
     padding: 10px;
 }
 .item-price-old{
@@ -43,7 +56,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border:1px solid black;
     padding: 10px;
 }
 .item .buy_cart{
@@ -52,7 +64,6 @@
     display: flex;
     justify-content:space-evenly;
     align-items: center;
-    border:1px solid black;
     margin-top:5px; 
 }
 .buy_cart .buy_now button{
@@ -64,10 +75,14 @@
     font-weight: 900;
     font-size: 16px;
     border:none;
-
+    cursor: pointer;
+}
+.buy_cart .buy_now button:hover{
+    background-color: black;
+    color:white
 }
 .buy_cart .add_to_cart button{
-    width: 150px;
+    width: 130px;
     background-color: #F2A727;
     color:black;
     border-radius:100px;
@@ -75,4 +90,36 @@
     font-weight: 900;
     font-size: 16px;
     border:none;
+    cursor: pointer;
+}
+.buy_cart .add_to_cart button:hover{
+    background-color: black;
+    color:white
+}
+.item .stock_avail{
+    margin:10px;
+    width:auto;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+.stock_avail h3{
+    color:#ffffff;
+    text-transform: uppercase;
+    background-color: #125e12;
+    padding:3px;
+}
+.item .social_media{
+    width:auto;
+    height:auto;
+    display: flex;
+    gap:15px;
+}
+.social_media .whatsapp_icon{
+    font-size:28px;
+    color: green;
+}
+.social_media .instagram_icon{
+    font-size:28px;
+    color:#a02667;
 }
