--- a/frontend/src/components/categeories/categeories.css
+++ b/frontend/src/components/categeories/categeories.css
@@ -1,3 +1,6 @@
+*{
+   text-decoration: none;
+}
 .categeories{
   width:80%;
   height:400px;
@@ -10,6 +13,20 @@
 .categeories_section{ 
     width:100%;
     height:100%;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto ;
+    display: flex;
+   justify-content: space-evenly;
+    gap:10px;
 }
+.categeories_section .cat_pro{
+  width:200px;
+  height:300px;
+  border:1px solid black;
+  
+}
+
+.cat_pro img{
+  width:150px;
+  height:200px;
+  object-fit: contain;
+}
+
