--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer_content{
     width:100%;
     height:500px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,16 +71,55 @@
     width: 100%;
     height: 100%;
     border:1px solid white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.logo_social_icons h3{
+    color:white;
+}
+.logo_social_icons span{
+    display: flex;
+    color:white;
+    font-size:24px;
+}
+.logo_social_icons .footer_logo{
+    width:120px;
+    height:120px;
+    border-radius:5px;
+    margin-top:10px;
 }
 .footer_links .Product_links{
     width: 100%;
     height: 100%;
     border:1px solid white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Product_links h2{
+    color:white;
+    margin-top:30px;
+    letter-spacing: 2px;
+}
+.Product_links h2 hr{
+    height:7px;
+    background-color: #ffd900;
+    width:80%;
+    margin-top:10px;
+}
+.Product_links .useful_links{
+    width: auto;
+    height:auto;
+    border:1px solid #ffffff;
+    margin-top:35px;
 }
 .footer_links .footer_useful_links{
     width: 100%;
     height: 100%;
     border:1px solid white;
+    display: flex;
+    flex-direction: column;
 }
 .footer_links .company_links{
     width: 100%;
